some fixes on gitignore

--- a/trunk/hybris/.gitignore
+++ b/trunk/hybris/.gitignore
@@ -18,6 +18,8 @@ hybris/temp/
 **/gensrc/
 **/testclasses/
 
+sampleconfigurations/
+
 ##############################################################
 ############### TechEdge build generated files ###############
 
