--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 **/.metadata/
 **/RemoteSystemsTempFiles/
 .eclipsebin
+.recommenders
 
 ##############################################################
 
